# template

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
code/libs/evt_driven/src/: a.out  main.cpp
code/libs/hal/comm/src/: comm.cpp
examples/SDL2_hellow_world/: CMakeLists.txt  main.cpp
examples/rendering_system/: CMakeLists.txt  main.cpp
libraries/rendering_system/: CMakeLists.txt
libraries/rendering_system/inc/: rendering_system.h
libraries/rendering_system/src/: rendering_system.cpp
src/: main.cpp
